# fanfic-ai-platform

./: .gitignore  next.config.mjs  package.json  render.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/schemas/: fanfic.py
backend/app/services/: r2_storage.py  scraper_service.py
backend/app/tasks/: kafka_producer.py  redis_cache.py
backend/ficbook_parser/: __init__.py  client.py  constants.py  proxy.py
backend/ficbook_parser/api/: author_profile.py  chapters.py  collections.py  comments.py  fanfic_page.py  fanfics_list.py  search.py  users.py
backend/ficbook_parser/auth/: session.py
backend/ficbook_parser/graphify-out/: .graphify_analysis.json  graph.html  graph.json  manifest.json
backend/ficbook_parser/models/: fanfic.py  search.py  sections.py  user.py
backend/ficbook_parser/parsers/: __init__.py  author.py  chapter.py  comments.py  fanfic_list.py  fanfic_page.py  utils.py
backend/migrations/: env.py
backend/tests/: test_new_endpoints.py
ficbook-parser/: .env.example  .gitignore  pyproject.toml
ficbook-parser/ficbook_parser/: client.py  constants.py
ficbook-parser/ficbook_parser/api/: __init__.py  chapters.py  fanfic_page.py  fanfics_list.py  notifications.py  search.py
ficbook-parser/ficbook_parser/auth/: __init__.py  session.py
ficbook-parser/ficbook_parser/models/: __init__.py  author.py  collection.py  (+2 more)
ficbook-parser/tests/: test_auth.py  test_parsers.py
(+127 files in other folders)
